<resources>
    <string name="app_name">Check in Demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check Out</string>
    <string name="log_out">Log out</string>
</resources>